# ogre

./: Cargo.toml  README.md
cards/data/: headless_horseman.json  raging_bull.json
ogre/: Cargo.toml
ogre/src/: lib.rs  lua.rs
ogre/src/action/: player_action.rs
ogre/src/card/: hand.rs  library.rs  mod.rs
ogre/src/card/card_types/: creature.rs  land.rs
ogre/src/errors/: mod.rs
ogre/src/game_state/: mod.rs
ogre/src/mana/: colors.rs  mana_pool.rs  mana_value.rs  mod.rs
ogre/src/phase/: mod.rs
ogre/src/player/: mod.rs
ogre/src/stack/: mod.rs
ogre/src/zone/: mod.rs
src/: main.rs
src/card/card_types/: mod.rs
src/mana/: colors.rs  mod.rs
src/player/: mod.rs
text_harness/: Cargo.toml
text_harness/decklists/: test_decklist.txt
text_harness/src/: decklist_parser.rs  main.rs
