[package]
name = "ogre"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20 = "0.10.0"
rand = "0.10.1"
serde_json = "1.0.150"

[dependencies.uuid]
version = "1.23.1"
features = [
    "v4",
]

[dependencies.mlua]
version = "0.11.6"
features = [
    "lua55",
]

[dependencies.serde]
version = "1.0.228"
features = [
    "derive",
]
